--- a/site.css
+++ b/site.css
@@ -1,200 +1,79 @@
-@import url('https://fonts.googleapis.com/css2?family=Mukta&family=Noto+Serif&display=swap');
-
-/* html,
-body {
-    background-color: rgb(44, 111, 179);
-    min-height: 100%;
-    word-spacing: normal;
-    margin: 0;
-    padding: 0;
-} */
-
-body {
-    font-family: Arial, Helvetica, sans-serif;
+.flip-container {
+    perspective: 1000;
 }
 
-* {
-    box-sizing: border-box;
+.flipper {
+    padding: 30px;
+    width: 300px;
+    height: 250px;
+    position: relative;
+    background: #f5f5f5;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
+    transition: 0.6s;
+    transform-style: preserve-3d;
 }
 
-
-/* Beginning code For cursor inside a circle */
-
-.circle {
-    position: fixed;
+.front,
+.back {
+    /*background-color: rgba(0,0,0,.3);*/
+    position: absolute;
+    padding: 10px 30px;
     top: 0;
     left: 0;
-    pointer-events: none;
-    z-index: 10000;
+    right: 0;
+    backface-visibility: hidden;
 }
 
-.circle::before {
-    content: "";
-    display: block;
-    width: 35px;
-    height: 35px;
-    border: 1.5px solid #0c1110;
-    border-radius: 50%;
-    background: transparent;
-    transform: translate(-50%, -50%);
-    animation: pulse 300ms ease-in-out alternate infinite
+.front {
+    z-index: 2;
+    /* for firefox 31 */
+    transform: rotateY(0deg);
 }
 
-p {
-    font-size: 1.5rem;
+.back {
+    transform: rotateY(180deg);
 }
 
-@keyframes pulse {
-    from {
-        transform: translate(-50%, -50%) scale(.8);
-    }
-    to {
-        transform: translate(-50%, -50%) scale(1.5);
-    }
+.flip {
+    transform: rotateY(180deg);
 }
 
-
-/* End of code For cursor inside a circle */
-
-
-/* style the container */
-
-.container {
-    position: relative;
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 20px 0 30px 0;
-}
-
-
-/* style inputs and link buttons */
-
-input,
-.btn {
+input {
     width: 100%;
-    padding: 12px;
-    border: none;
-    border-radius: 4px;
-    margin: 5px 0;
-    opacity: 0.85;
-    display: inline-block;
-    font-size: 17px;
-    line-height: 20px;
-    text-decoration: none;
-    /* remove underline from anchors */
+    margin-bottom: 15px;
+    height: 40px;
+    box-sizing: border-box;
+    padding: 10px;
 }
 
-input:hover,
-.btn:hover {
-    opacity: 1;
-}
-
-
-/* add appropriate colors to fb, twitter and google buttons */
-
-.fb {
-    background-color: #3B5998;
-    color: white;
-}
-
-.twitter {
-    background-color: #55ACEE;
-    color: white;
-}
-
-.google {
-    background-color: #dd4b39;
-    color: white;
-}
-
-
-/* style the submit button */
-
-input[type=submit] {
-    background-color: #4CAF50;
-    color: white;
-    cursor: pointer;
-}
-
-input[type=submit]:hover {
-    background-color: #45a049;
-}
-
-
-/* Two-column layout */
-
-.col {
-    float: left;
-    width: 50%;
-    margin: auto;
-    padding: 0 50px;
-    margin-top: 6px;
-}
-
-
-/* Clear floats after the columns */
-
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-
-/* vertical line */
-
-.vl {
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%);
-    border: 2px solid #ddd;
-    height: 175px;
-}
-
-
-/* text inside the vertical line */
-
-.vl-innertext {
-    position: absolute;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #f1f1f1;
-    border: 1px solid #ccc;
-    border-radius: 50%;
-    padding: 8px 10px;
-}
-
-
-/* hide some text on medium and large screens */
-
-.hide-md-lg {
-    display: none;
-}
-
-
-/* bottom container */
-
-.bottom-container {
+.title {
     text-align: center;
-    background-color: #666;
-    border-radius: 0px 0px 4px 4px;
+}
+
+.flipbutton {
+    color: #4096ee;
+    text-decoration: none;
+    text-align: left !important;
 }
 
 
-/* Responsive layout - when the screen is less than 650px wide, make the two columns stack on top of each other instead of next to each other */
+/* Alignment styles */
 
-@media screen and (max-width: 650px) {
-    .col {
-        width: 100%;
-        margin-top: 0;
-    }
-    /* hide the vertical line */
-    .vl {
-        display: none;
-    }
-    /* show the hidden text on small screens */
-    .hide-md-lg {
-        display: block;
-        text-align: center;
-    }
+body,
+html {
+    height: 100%;
+}
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #092756;
+    background: -moz-radial-gradient(0% 100%, ellipse cover, rgba(104, 128, 138, .4) 10%, rgba(138, 114, 76, 0) 40%), -moz-linear-gradient(top, rgba(57, 173, 219, .25) 0%, rgba(42, 60, 87, .4) 100%), -moz-linear-gradient(-45deg, #670d10 0%, #092756 100%);
+    background: -webkit-radial-gradient(0% 100%, ellipse cover, rgba(104, 128, 138, .4) 10%, rgba(138, 114, 76, 0) 40%), -webkit-linear-gradient(top, rgba(57, 173, 219, .25) 0%, rgba(42, 60, 87, .4) 100%), -webkit-linear-gradient(-45deg, #670d10 0%, #092756 100%);
+    background: -o-radial-gradient(0% 100%, ellipse cover, rgba(104, 128, 138, .4) 10%, rgba(138, 114, 76, 0) 40%), -o-linear-gradient(top, rgba(57, 173, 219, .25) 0%, rgba(42, 60, 87, .4) 100%), -o-linear-gradient(-45deg, #670d10 0%, #092756 100%);
+    background: -ms-radial-gradient(0% 100%, ellipse cover, rgba(104, 128, 138, .4) 10%, rgba(138, 114, 76, 0) 40%), -ms-linear-gradient(top, rgba(57, 173, 219, .25) 0%, rgba(42, 60, 87, .4) 100%), -ms-linear-gradient(-45deg, #670d10 0%, #092756 100%);
+    background: -webkit-radial-gradient(0% 100%, ellipse cover, rgba(104, 128, 138, .4) 10%, rgba(138, 114, 76, 0) 40%), linear-gradient(to bottom, rgba(57, 173, 219, .25) 0%, rgba(42, 60, 87, .4) 100%), linear-gradient(135deg, #670d10 0%, #092756 100%);
 }
